11. When using Cache config page to clear disk cover/scaled-cover cache, also
    clear memory cache.
12. Allow to change stream, and online-service, filter search category without
    closing current search field.
13. Fix combo-box text changed signal for Qt5 builds.
14. Don't have double spacer when cover-widget is hidden.
15. Fix crash in context view if song tracks changed quickly.

1.4.1
-----
 1. Remove unused var warning when compiling without online services.
 2. Remove some moc/QObject warnings in KDE builds without streams or http
    server.
 3. Update current song to scrobble, even if disabled, so that when enabled we
    can scrobble.
 4. Seems like MPDSribble itself is broken with regards to sending "love"
    status, so remove MPDScribble from list of scrobblers.
 5. Last.fm replies are XML, so decode these properly!
 6. Don't log scrobbler session key to debug file.
 7. Remove extra margin in podcast settings dialog.
 8. When adjusting track numbers in tag editor, start from first actual track.
 9. Only enable 'center on current track' action if there is a current track.
10. Use comma to split multiple genres in tooltip and table views.
11. Don't URL encode scrobble keys, just values.
12. If now playing has been sent, track has not been scrobbled, then when track
    is played after beeing paused for more than 5 seconds resend now playing.
13. Rescrobble, and re-send now playing, if track is repeated.
14. Exceptions are required for all non Qt5 builds.
15. Fix crash in settings dialog when some system-tray options removed.
16. Use QIcon::fromTheme to set system-tray icon.
17. Fix compilation with older ffmpeg versions.
18. Fix compilation with taglib versions older than 1.8
19. Use KDE cmake macro to enable exceptions in KDE builds.
20. Don't alter text of 'Other Views' tab in preferences dialog if streams,
    online, and device support are disabled - as there are still 2 views;
    folders and search.